<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_translate"
            android:icon="@drawable/nav_translate"
            android:title="@string/translate" />
        <item
            android:id="@+id/nav_voice"
            android:icon="@drawable/nav_voice"
            android:title="@string/voice_input" />
        <item
            android:id="@+id/nav_daily_one"
            android:icon="@drawable/nav_note"
            android:title="@string/daily_one" />

        <item
            android:id="@+id/nav_notebook"
            android:icon="@drawable/nav_bookmark"
            android:title="@string/notebook" />
    </group>

    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/nav_setting"
        android:title="@string/setting" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/nav_about"
        android:title="@string/about" />
</menu>